k8s-config/data-plane/ddos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddos-simulator
  namespace: medical-data
spec:
  replicas: 5 # Số lượng 'botnet' giả lập tấn công
  selector:
    matchLabels:
      app: ddos-simulator
  template:
    metadata:
      labels:
        app: ddos-simulator
    spec:
      containers:
        - name: ddos
          image: minhquyen1325/ddos-simulator:v1
          imagePullPolicy: IfNotPresent
          command: ["python", "ddos_sim.py"]
