k8s-config/data-plane/noise-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noise-generator
  namespace: medical-data
spec:
  replicas: 2
  selector:
    matchLabels:
      app: noise-generator # Phải khớp với label ở dưới
  template:
    metadata:
      labels:
        app: noise-generator # Selector tìm Pod dựa vào nhãn này
    spec:
      containers:
        - name: noise
          image: minhquyen1325/noise-generator:latest
          imagePullPolicy: Always
          command: ["python", "noise_gen.py"]
