k8s-config/data-plane/mosquitto.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mosquitto
  namespace: medical-data
spec:
  serviceName: "mosquitto"
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:latest
          ports:
            - containerPort: 1883
              name: mqtt
          volumeMounts:
            - name: config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
      volumes:
        - name: config
          configMap:
            name: mosquitto-config
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-service
  namespace: medical-data
spec:
  type: NodePort # Dùng NodePort để máy Local truy cập được
  selector:
    app: mosquitto
  ports:
    - port: 1883
      targetPort: 1883
      nodePort: 31883 # Trùng với cổng chúng ta đã map trong Terraform main.tf
      protocol: TCP
      name: mqtt
