k8s-config/data-plane/target-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: target-app-service
  namespace: medical-data
spec:
  selector:
    app: target-app
  ports:
    - protocol: TCP
      port: 80 # Cổng Ingress gọi vào
      targetPort: 8000 # Cổng App Python đang lắng nghe
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: target-app
  namespace: medical-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: target-app
  template:
    metadata:
      labels:
        app: target-app
    spec:
      containers:
        - name: target-app
          image: target-app:v1
          imagePullPolicy: Never # QUAN TRỌNG: Để K8s lấy image từ Kind load, không pull từ internet
          ports:
            - containerPort: 8000
